--- a/wp-content/themes/teamlab-blog-2-0/css/pushy.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/pushy.css
@@ -174,6 +174,7 @@
   #navitem_solutions, 
   #navitem_prices, 
   #navitem_about,
+  #navitem_developers,
   #navitem_integrations,
   a.singin {
     font-size: 16px;
