--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -37,7 +37,7 @@ main{
     line-height: 22px;
     text-decoration: none !important;
     letter-spacing: -0.01em;
-    padding: 15px 0 19px;
+    padding: 7px 0px 9px;
     white-space: nowrap;
     position: relative;
     display: inline-block;
