--- a/wp-content/themes/teamlab-blog-2-0/css/common.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/common.css
@@ -91,18 +91,6 @@ header {
   z-index: 1;
   position: relative;
 }
-@media screen and (max-width: 1440px) {
-  .logo {
-    width: 32px;
-    background-size: 152px 32px;
-  }
-}
-@media screen and (max-width: 1024px) {
-  .logo {
-    width: 180px;
-    background-size: auto 28px;
-  }
-}
 .logo a {
   display: block;
   height: 100%;
@@ -231,15 +219,14 @@ footer h6.second_h {
   position: relative;
   height: 150px;
 }
-/*.copyReserved p{*/
-/*  font-family: Open Sans;*/
-/*  font-style: normal;*/
-/*  font-weight: normal;*/
-/*  font-size: 13px;*/
-/*  line-height: 18px;*/
-/*  color: #AAAAAA;*/
-/*  text-align: end;*/
-/*}*/
+.copyReserved {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 18px;
+  color: #AAAAAA;
+}
 span.underline {
   border-bottom: 1px dotted #838383;
   padding-bottom: 2px;
@@ -319,6 +306,13 @@ input.vertical-bottom {
 }
 #defaultpage .bottomgray {
   background: transparent;
+}
+.MainContainer .content .post {
+  box-shadow: 0px 7px 25px rgba(85, 85, 85, 0.15);
+}
+#true_loadmore_mobile,
+#true_loadmore_tags_mobile{
+  display: none;
 }
 .footer_menu_item {
   padding: 0 0 32px;
@@ -642,61 +636,45 @@ body.desktop .button.red.disabled:visited {
   text-transform: none;
   padding: 10px 25px;
 }
-@media screen and (min-width: 1920px) {
-  .postwrapper a img {
-    height: calc(100vw * 0.10);
-  }
+
+.postwrapper {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #EFEFEF;
+  border-radius: 5px;
+  height: 100%;
+  background-color: #FFFFFF;
+  transition: box-shadow 0.3s;
 }
 
-@media screen and (max-width: 1920px) {
-  .postwrapper a img {
-    height: calc(100vw * 0.10);
-  }
+.postwrapper:hover {
+  box-shadow: 0px 7px 25px rgba(85, 85, 85, 0.15);
 }
-@media screen and (max-width: 1640px) {
-  .postwrapper a img {
-    height: calc(100vw * 0.12);
-  }
-}
-@media screen and (max-width: 1320px) {
-  .download-block {
-    height: auto;
-  }
 
-  .download-button {
-    display: block;
-    text-align: center;
-    align-items: center;
-  }
-  .download.GooglePlay{
-    margin: 0 16px 0 0;
-  }
-  .download.AppStore {
-    margin: 0;
-  }
-  .download {
-    margin: 0 16px 16px 0;
-  }
-  .postwrapper a img {
-    height: calc(100vw * 0.12);
-  }
+.recent-posts-block{
+  padding: 64px 0 120px;
+  background-color: #F5F5F5;
 }
-@media screen and (max-width: 1200px) {
-  .wdgt-facebook,
-  .wdgt-twitter,
-  .wdgt-vk,
-  .wdgt-instagram {
-    margin-right: 4px;
+
+.recent-posts-block-container {
+  max-width: 1184px;
+  padding: 0 32px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1460px) {
+  .logo {
+    width: 32px;
+    background-size: 152px 32px;
   }
   .input-header .search-field{
     width: 0;
     height: 32px;
-    padding: 0 0 0 14px;
+    padding: 0 30px 0 14px;
     border: none;
     background-color: transparent;
     background-size: 14px 15px;
     cursor: pointer;
-    background-position: 99% center;
   }
   .ja .input-header .search-field{
       box-sizing: border-box;
@@ -708,20 +686,16 @@ body.desktop .button.red.disabled:visited {
     border-radius: 5px;
     cursor: text;
     outline: 0;
-    width: calc(100vw - 120px);
-  }
-  .ListSocLink li {
-    padding-right: 13px;
+    width: calc(100vw - 110px);
   }
   .serach-header {
     position: absolute;
-    right: 40px;
+    right: 24px;
     top: 20px;
-    z-index: 15;
   }
 
-    .input-header .search-field::placeholder { 
-      line-height: 220%;
+  .input-header .search-field::placeholder { 
+    line-height: 220%;
   }
   /* WebKit, Edge */
   .input-header .search-field::-webkit-input-placeholder {
@@ -747,15 +721,48 @@ body.desktop .button.red.disabled:visited {
   .input-header .search-field::-ms-input-placeholder { 
     line-height: 220%;
   }
+}
+@media screen and (max-width: 1320px) {
+  .download-block {
+    height: auto;
+  }
 
+  .download-button {
+    display: block;
+    text-align: center;
+    align-items: center;
+    margin-right: -16px;
+    gap: initial;
+  }
+  .download {
+    margin: 0 16px 16px 0;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .wdgt-facebook,
+  .wdgt-twitter,
+  .wdgt-vk,
+  .wdgt-instagram {
+    margin-right: 4px;
+  }
+  .ListSocLink li {
+    padding-right: 13px;
+  }
+  .narrowheader{
+    width: calc(100% - 30px);
+  }
 }
 
 @media screen and (max-width: 1024px){
+  .logo {
+    width: 180px;
+    background-size: auto 28px;
+  }
   main{
     padding-top: 50px;
     position: relative;
     margin-top: -50px;
-}
+  }
 
   .all-menu-items{
     display: block;
@@ -766,6 +773,14 @@ body.desktop .button.red.disabled:visited {
   }
   body, .BaseSide{
     min-width: 0;
+  }
+  .InThePressContainer #content{
+    display: block;
+    grid-template-columns: initial;
+    gap: initial;
+  }
+  .in-the-press{
+    padding: 0 16px;
   }
   .MainContainer{
     width: auto;
@@ -799,6 +814,17 @@ body.desktop .button.red.disabled:visited {
     box-sizing: border-box;
     padding: 0 0 80px 0;
   }
+  .SingleContainer #content h1{
+    margin-bottom: 40px;
+  }
+  .SingleContainer .download-block, 
+  .SingleContainer .subscribe-blue, 
+  .SingleContainer .subscribe-white{
+    grid-column: span 2;
+  }
+  .recent-posts-block{
+    padding: 32px 0 64px;
+  }
   .ErrorContainer {
     max-width: 736px;
     overflow: hidden;
@@ -823,21 +849,44 @@ body.desktop .button.red.disabled:visited {
   }
   #content{
     display: block;
+    margin-bottom: 44px;
   }
-  .content{
-    width: 100%;
+  .wrapperBlock{
+    margin-bottom: 48px;
+  }
+  .wrapperBlockBottom{
+    margin-bottom: 32px;
+  }
+  .wrapperTitle{
+    margin-bottom: 18px;
+  }
+  .wrapperTitle .view-all{
+    display: none;
+  }
+  .wrapperMorePosts{
+    display: block;
+  }
+  #true_loadmore,
+  #true_loadmore_tags{
+    display: none;
+  }
+  #true_loadmore_mobile,
+  #true_loadmore_tags_mobile{
+    display: block;
+  }
+  .wrapperMain .main_button{
+    grid-column: span 2;
+  }
+  .category-topics{
+    margin-top: 32px;
   }
   .content .cloud-block .red{
     padding: 12px 20px;
-  }
-  .input-header .search-field:focus {
-    width: calc(100vw - 130px);
   }
   .serach-header{
     position: absolute;
     right: 61px;
     top: 8px;
-    z-index: 15;
 }
 .no-results h3{
   margin-bottom: 80px;
@@ -864,11 +913,7 @@ body.desktop .button.red.disabled:visited {
   .post .entry-info .post-info{
     padding-bottom: 10px;
   }
-  .postwrapper a img {
-    height: calc(100vw * 0.20);
-  }
   .sidebar{
-    margin-top: 80px;
     width: 100%;
     display: block;
   }
@@ -882,12 +927,87 @@ body.desktop .button.red.disabled:visited {
     display: none;
   }
   .wrapperMain{
-    margin-top: 56px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 32px;
-    grid-row-gap: 61px;
+    gap: 48px 32px;
     position: relative;
+  }
+  .subscribe-blue{
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 48px;
+    padding: 32px 16px;
+  }
+  .subscribe-blue h2{
+    margin: 0 0 32px;
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: -0.01em;
+  }
+  #email-sub-button{
+    font-size: 0;
+    min-width: 56px;
+    background-image: url(../images/Union.svg);
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+  }
+  .download{
+    padding: 11px 10px;
+    font-size: 11.5px;
+    line-height: 23px;
+    width: 122px;
+    height: 47px;
+  }
+  .download-button{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .download.winodws,
+  .download.linux,
+  .download.MacOs{
+    padding: 11px 10px 11px 40px;
+  }
+  .winodws:before{
+    left: 11px;
+    top: 11px;
+    width: 23px;
+    height: 23px;
+    background-size: 344px 23px;
+  }
+  .linux:before{
+    left: 10px;
+    top: 11px;
+    width: 23px;
+    height: 23px;
+    background-size: 366px 23px;
+  }
+  .MacOs:before{
+    left: 10px;
+    top: 11px;
+    width: 23px;
+    height: 23px;
+    background-size: 391px 23px;
+  }
+  .GooglePlay:before{
+    left: 14px;
+    top: 11px;
+    width: 92px;
+    height: 23px;
+    background-position: -230px 50%;
+    background-size: 494px 23px;
+  }
+  .AppStore:before{
+    left: 14px;
+    top: 11px;
+    width: 87px;
+    height: 23px;
+    background-position: -111px 50%;
+    background-size: 428px 23px;
+  }
+  .load_more_results{
+    grid-column: span 2;
   }
   footer {
     max-width: 736px;
@@ -897,7 +1017,8 @@ body.desktop .button.red.disabled:visited {
     width: auto;
   }
   .download-block{
-    padding: 48px 31px 56px 31px;
+    margin: 48px 0;
+    padding: 48px 18px 64px;
   }
   .tags-page{
     margin-top: 62px;
@@ -930,6 +1051,9 @@ body.desktop .button.red.disabled:visited {
 }
 
 @media screen and (max-width: 768px){
+  .wrapperMain{
+    gap: 32px;
+  }
   .MainContainer{
   padding: 0 40px 80px 40px;
   }
@@ -970,8 +1094,14 @@ body.desktop .button.red.disabled:visited {
      text-align: left;
    }
    #post-content .content .entry-header .info-page {
-     margin-top: 7px;
-   }
+    margin-top: 24px;
+    flex-wrap: wrap;
+  }
+  #post-content .content .entry-header .info-page .addtoany_list {
+   display: block;
+   margin-top: 24px;
+   width: 100%;
+  }
    #post-content .content .meta .comments,
    #post-content .content .meta .views {
      display: none;
@@ -1165,25 +1295,103 @@ body.desktop .button.red.disabled:visited {
 
 
 @media screen and (max-width: 592px){
-
+  .main_button::after,
+  .load_more_results::after,
+  .main_button:hover:after,
+  .load_more_results:hover:after{
+    left: 47%;
+  }
+  .searchForm{
+    margin-bottom: 32px;
+  }
+  .SearchContainer .searchlist{
+    padding: 0 16px;
+  }
+  .SingleContainer .entry-title{
+    padding: 0 16px;
+  }
+  .SingleContainer .press-page-title{
+    padding: 0;
+  }
+  .SingleContainer .content a.nameTags{
+    margin: 0;
+  }
+  .SingleContainer .bottomWrapper{
+    margin-top: 48px;
+  }
+  .wrapperMainTag ~ .bottomWrapper {
+    margin-top: 32px;
+  }
+  .wrapperMainTag{
+    margin: 18px 0 0;
+  }
   .MainContainer{
     padding: 0 0 64px 0;
   }
+  .PostContainer .post{
+    padding: 0 16px;
+  }
+  .MainContainer .content .post {
+    margin: 0 16px;
+  }
   .wrapperMain{
-    display: block;
+    grid-template-columns: initial;
+    gap: 32px;
+  }
+  .wrapperTitle{
+    margin-right: 0;
+  }
+  .wrapperTitle h2{
+    margin-right: 0;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.01em;
   }
   .postwrapper{
-    margin:0 15px 61px 15px;
+    margin: 0 16px;
   }
-  .download-block{
-    margin: 64px 0;
+  .main-input,
+  .inputButton{
+    height: 48px;
   }
-  .bottomWrapper {
-    padding-bottom: 56px;
+  .subscribe-blue span a, 
+  .subscribe-blue span a:hover, 
+  .subscribe-blue span a:visited, 
+  .subscribe-blue span a:link{
+    font-size: 12px;
+    line-height: 16px;
+  }
+  .inputBox{
+    margin-bottom: 16px;
   }
  .SingleContainer{
-    padding: 0 0 96px;
+    padding: 0 0 64px;
     width: 100%;
+  }
+  .SingleContainer .download-block, 
+  .SingleContainer .subscribe-blue, 
+  .SingleContainer .subscribe-white{
+    grid-column: initial;
+    margin: 16px 0;
+  }
+  .SingleContainer #content h1{
+    margin-bottom: 18px;
+    padding: 0 16px;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.01em;
+  }
+  .download-block,
+  .subscribe-blue,
+  .subscribe-white{
+    box-shadow: initial;
+  }
+  .load_more_results{
+    grid-column: initial;
+  }
+  .load_more_results,
+  .wrapperMain .main_button{
+    margin: 0 16px;
   }
   .PostContainer {
     padding: 0 0 60px;
@@ -1193,7 +1401,7 @@ body.desktop .button.red.disabled:visited {
      margin: 0;
    }
   .SingleContainer .breadcrumbs-single{
-    margin: 32px 0 40px;
+    margin: 32px 0;
   }
   .breadcrumbs-single{
     padding: 0 15px;
@@ -1222,13 +1430,34 @@ body.desktop .button.red.disabled:visited {
   .MailContainer{
       padding: 32px 15px 40px;
   }
+  .wrapperTitle,
   .search-main{
-    padding: 0 15px;
+    padding: 0 16px;
   }
-  .SingleContainer .subscribe-blue,
-  .SingleContainer .subscribe-white,
+  .category-topics{
+    margin: 32px 16px;
+  }
   .sidebar {
     margin-top: 48px;
+  }
+  .recent-posts-block{
+    margin-top: 0;
+    padding: 45px 0 64px;
+  }
+  .recent-posts-block-container{
+    padding: 0 16px;
+  }
+  .recent-posts-block h3{
+    font-size: 24px;
+    letter-spacing: -0.02em;
+    color: #333333;
+    text-align: left;
+  }
+  .recent-posts-block .wrapperMain{
+    margin-top: 24px;
+  }
+  .recent-posts-block .postwrapper{
+    margin: 0;
   }
   .wpdc-join-discussion{
     max-width: none;
@@ -1243,8 +1472,8 @@ body.desktop .button.red.disabled:visited {
     letter-spacing: 0.04em;
 }
   .subscribe-white{
-    padding: 66px 40px 67px;
-    background: url(../images/newsletter.svg) no-repeat  50% 66px;
+    margin-bottom: 48px;
+    padding: 32px 16px;
 }
   .ErrorContainer {
     width:  auto;
@@ -1260,7 +1489,7 @@ body.desktop .button.red.disabled:visited {
     -webkit-transform: none;
   }
   .widget{
-    margin:0 15px 48px 15px;
+    margin:0 16px 48px 16px;
   }
   .popup{
     width: 100%;
@@ -1269,14 +1498,11 @@ body.desktop .button.red.disabled:visited {
   .content .cloud-block .red{
     bottom: 32px;
   }
-  .download.GooglePlay{
-    margin-bottom: 16px;
-  }
   .download.AppStore {
     margin: 0 16px 0 0;
   }
   div#comments{
-    padding: 35px 15px 40px 15px;
+    padding: 44px 16px 27px 16px;
   }
   #post-content .sidebar {
     margin-top: 40px;
@@ -1284,16 +1510,48 @@ body.desktop .button.red.disabled:visited {
   .content a.nameTags {
     margin: 16px 0;
   }
-  .load_more_results{
-    margin: 48px auto 0;
+  .post .post-content p{
+    margin: 12px 0 0;
   }
-  .post{
-    padding: 0 15px;
+  .post p{
+    font-size: 14px;
+    line-height: 26px;
   }
-  h2.entry-title:first-child{
-    padding: 0 15px;
+  .MainContainer .content .post>a {
+    padding-bottom: 50%;
   }
-
+  .postwrapper > a{
+    padding-bottom: 50.35%;
+  }
+  .postThemeGridBox{
+    padding: 24px;
+  }
+  .postThemeGridBox h4.entry-title{
+    font-size: 16px;
+    line-height: 21px;
+  }
+  .meta span{
+    margin-right: 16px;
+  }
+  .category-topics h4{
+    font-size: 16px;
+    line-height: 21px;
+    letter-spacing: -0.01em;
+  }
+  .wrapperMain .main_button{
+    grid-column: initial;
+  }
+  .wrapperMorePosts a{
+    display: block;
+  }
+  .download-top h3{
+    font-size: 16px;
+    line-height: 21px;
+    letter-spacing: -0.01em;
+  }
+  .download-button{
+    margin-top: 20px;
+  }
   .entry-title{
     font-size: 24px;
   }
@@ -1302,8 +1560,8 @@ body.desktop .button.red.disabled:visited {
     line-height: 133%;
   }
   .post h2.entry-title a{
-    font-size: 18px;
-    line-height: 133%;
+    font-size: 16px;
+    line-height: 21px;
   }
   .post h2.entry-title.press-page-title a {
     font-size: 18px;
@@ -1317,9 +1575,6 @@ body.desktop .button.red.disabled:visited {
     height: 252px;
     padding-top: 39px;
     background-size: 272px 122.78px;
-  }
-  .postwrapper a img {
-    height: auto;
   }
   .content-mail h2{
     font-size: 24px;
@@ -1378,6 +1633,7 @@ body.desktop .button.red.disabled:visited {
     padding: 16px 20px;
   }
   #post-content .content h1 {
+      margin-bottom: 24px;
       font-size: 24px;
   }
   #post-content .content h2 {
@@ -1419,15 +1675,6 @@ body.desktop .button.red.disabled:visited {
 }
 
 @media screen and (max-width: 488px) {
-#post-content .content .entry-header .meta .a2a_kit {
-  bottom: -50px;
-  left: 0;
-  top: auto;
-  right: auto;
-}
-#post-content .content .entry-content {
-  margin: 72px auto 0;
-}
 .content p.first-img {
   margin-top: 72px;
 }
@@ -1486,9 +1733,6 @@ body.desktop .button.red.disabled:visited {
   }
   div.post div.entry-utility span.googleplus-button{
     display: none;
-  }
-  .postwrapper {
-    margin-bottom: 45px;
   }
   .search-main {
     margin: 32px 0 32px 0;
