--- a/wp-content/themes/teamlab-blog-2-0/style.css
+++ b/wp-content/themes/teamlab-blog-2-0/style.css
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: -0.02em;
     font-style: normal;
     font-weight: 700;
-    margin: 40px 0 23px;
+    margin-bottom: 32px;
     line-height: 133%;
 }
 #post-content .content h1 {
