--- a/wp-content/themes/tmblog2/css/navigation.css
+++ b/wp-content/themes/tmblog2/css/navigation.css
@@ -580,7 +580,7 @@ div.custom-select div.selector {
       position: absolute;
       top: 0;
       width: 30px;
-      z-index: 10000000;
+      z-index: 100;
   }
   .pushy, .push {
       transition: transform .2s cubic-bezier(.16,.68,.43,.99);
